# osx-dev-setup

./: .ansible-lint  .pre-commit-config.yaml  Makefile  Pipfile  README.md  default.config.yml  handlers.yml  inventory  main.yml  pre.yml  pyproject.toml  requirements.yml
.github/workflows/: ci.yml
files/: .zshrc.j2  sshconfig.j2
handlers/: main.yml
tasks/: dependencies.yml  docker.yml  git.yml  ssh.yml  system.yml  terminal.yml
tests/: config.yml  inventory
