[tool.poetry]
name = "osx-dev-setup"
version = "1.0.0"
description = ""
authors = ["Artis3n <dev@artis3nal.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^7.2.0"

[tool.poetry.dev-dependencies]
ansible-lint = "^6.3.0"
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
